creata attività lista trofei

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,7 +31,15 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="it.unipd.mpezzutt.stageitrun.MainActivity" />
         </activity>
-        <activity android:name=".StageSpecActivity"></activity>
+        <activity
+            android:name=".StageSpecActivity"
+            android:label="@string/action_stage_spec"
+            android:parentActivityName=".MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="it.unipd.mpezzutt.stageitrun.MainActivity" />
+        </activity>
+        <activity android:name=".TrophyActivity"></activity>
     </application>
 
 </manifest>
