--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,19 +25,19 @@
         </activity>
         <activity
             android:name=".LoginActivity"
-            android:label="@string/title_activity_login"
-            android:parentActivityName=".MainActivity">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="it.unipd.mpezzutt.stageitrun.MainActivity" />
+            android:label="@string/title_activity_login">
+        </activity>
+        <activity
+            android:name=".StageActivity"
+            android:label="@string/activity_stage">
         </activity>
         <activity
             android:name=".StageSpecActivity"
             android:label="@string/action_stage_spec"
-            android:parentActivityName=".MainActivity">
+            android:parentActivityName=".StageActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="it.unipd.mpezzutt.stageitrun.MainActivity" />
+                android:value="it.unipd.mpezzutt.stageitrun.StageActivity" />
         </activity>
         <activity android:name=".TrophyActivity"></activity>
     </application>
