--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/logo_unipd"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
@@ -25,12 +25,10 @@
         </activity>
         <activity
             android:name=".LoginActivity"
-            android:label="@string/title_activity_login">
-        </activity>
+            android:label="@string/title_activity_login" />
         <activity
             android:name=".StageActivity"
-            android:label="@string/activity_stage">
-        </activity>
+            android:label="@string/activity_stage" />
         <activity
             android:name=".StageSpecActivity"
             android:label="@string/action_stage_spec"
@@ -39,7 +37,7 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="it.unipd.mpezzutt.stageitrun.StageActivity" />
         </activity>
-        <activity android:name=".TrophyActivity"></activity>
+        <activity android:name=".TrophyActivity" />
     </application>
 
 </manifest>
