--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/logo_unipd"
+        android:icon="@mipmap/logo_unipd_white"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
@@ -31,6 +31,13 @@
         <activity
             android:name=".StageSpecActivity"
             android:label="@string/action_stage_spec"
+            android:parentActivityName=".MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="it.unipd.mpezzutt.stageitrun.MainActivity" />
+        </activity>
+        <activity android:name=".TrophySpecActivity"
+            android:label="@string/action_trophy_spec"
             android:parentActivityName=".MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
