--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,9 +3,6 @@
     package="it.unipd.mpezzutt.stageitrun">
 
     <!-- To auto-complete the email text field in the login form with the user's emails -->
-    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
-    <uses-permission android:name="android.permission.READ_PROFILE" />
-    <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -21,7 +18,6 @@
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -36,7 +32,8 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="it.unipd.mpezzutt.stageitrun.MainActivity" />
         </activity>
-        <activity android:name=".TrophySpecActivity"
+        <activity
+            android:name=".TrophySpecActivity"
             android:label="@string/action_trophy_spec"
             android:parentActivityName=".MainActivity">
             <meta-data
