--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,6 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:23.3.0'
     compile 'com.google.zxing:core:3.2.1'
     compile project(':volley')
+    compile 'com.google.zxing:android-integration:3.2.1'
+    compile 'com.google.zxing:android-core:3.2.1'
 }
